--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -21,7 +21,11 @@
             border-radius: 5px 0px 0px 5px;
             color: $black;
         }
-        button{
+        .button-submit{
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: $black;
             border-radius: 0px 5px 5px 0px;
             border: none;
             background-color: $light-green;
