--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -30,6 +30,9 @@
             border: none;
             background-color: $light-green;
         }
-        
+    }
+    .back-button{
+        text-decoration: none;
+        color: $black;
     }
 }
